# jessegpt

./: .all-contributorsrc  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release_agent.yaml
agent/: .env.example  Dockerfile  Makefile  README.md  compose.yml  jesses_tweets.py  main.py  prompts.py  pyproject.toml  realtime.py  tts.py
agent/.github/workflows/: release.yaml
agent/livekit-plugins-smallest/: setup.py
agent/livekit-plugins-smallest/livekit/plugins/smallest/: models.py  tts.py
agent/voice_agent/: __main__.py  assistant.py  constants.py  entrypoint.py  logger.py  persona_config.py  stt_words.py
agent/voice_agent/prompts/: austin_tweets.py  prompts.py
client/: .env.example  .prettierrc.js  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
client/api/: index.ts
client/app/: globals.css  layout.tsx  page.tsx
client/components/: AgentSelection.tsx  Button.tsx  CloseIcon.tsx  CustomVoiceAssistantControlBar.tsx  EditIdea.tsx  JesseFrame.tsx  Loader.tsx  LoadingPage.tsx  MicIcon.tsx  NoAgentNotification.tsx  PersonaFrame.tsx  ShareModal.tsx  Snackbar.tsx  TranscriptionView.tsx  VoiceAssistant.tsx
client/config/: persona.config.ts  wagmi.ts
client/constants/: index.ts
client/context/: AppKitContext.tsx
client/helpers/: copy.ts  ipfs.ts  responsive.tsx
client/hooks/: useButtonPointerAnimation.ts  useCoinOnZora.ts  useCombinedTranscriptions.ts  useIsPhone.ts
client/theme/: colors.ts
docs/: FORKING.md  deploy-fly.md  deploy-livekit-cloud.md  deploy-railway.md  deploy-vercel.md
(+17 files in other folders)
