[project]
name = "jesse-livekit-voice-agent"
version = "0.1.0"
description = "Jesse Livekit Voice Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.1",
    "livekit-agents[cartesia,deepgram,elevenlabs,google,openai,silero,turn-detector]~=1.0",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.1.0",
]
